--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -53,26 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asd\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "NoneType"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "# estructura para crear un trie\n",
     "class TrieNode(object):\n",
-    "    indice = 0\n",
     "    def __init__(self, char):\n",
+    "        self.indice = 0\n",
     "        self.char = char\n",
     "        self.children = []\n",
     "        self.father = None\n",
@@ -80,8 +85,13 @@
     "        self.word= None\n",
     "        self.counter = 1\n",
     "\n",
-    "    def add(self, word):\n",
     "\n",
+    "class Trie(object):\n",
+    "    def _init_(self):\n",
+    "        self.size = 0\n",
+    "        self.node = TrieNode('')\n",
+    "        q\n",
+    "    def add(self, word):\n",
     "        node = self\n",
     "        for char in word:\n",
     "            found_in_child = False\n",
@@ -98,7 +108,7 @@
     "                node.counter += 1\n",
     "                new_node.father = node\n",
     "                node = new_node\n",
-    "                TrieNode.indice += 1\n",
+    "                Trie.size += 1\n",
     "                node.indice = TrieNode.indice\n",
     "                \n",
     "        \n",
@@ -116,12 +126,14 @@
     "\n",
     "    def pull(node,ind):\n",
     "        if(node.indice == ind):\n",
-    "            print(type(node))\n",
     "            return node\n",
     "        else:\n",
     "            for nodeChild in node.children:\n",
     "                if nodeChild.indice <= ind:\n",
     "                    return nodeChild.pull(ind)\n",
+    "            print('asd')\n",
+    "    \n",
+    "\n",
     "\n",
     "                    \n",
     "trie = TrieNode(\"\")\n",
@@ -131,13 +143,13 @@
     "trie.add(\"caros\")\n",
     "\n",
     "trie2 = TrieNode(\"\")\n",
-    "trie2.add(\"patata\")\n",
-    "trie2.add(\"patatero\")\n",
-    "trie2.add(\"pisto\")\n",
-    "trie2.add(\"pimiento\")\n",
+    "trie2.add(\"caro\")\n",
+    "trie2.add(\"cara\")\n",
+    "trie2.add(\"codo\")\n",
+    "trie2.add(\"caros\")\n",
     "\n",
     "\n",
-    "type(trie2.pull(3))"
+    "type(trie2.pull(15))"
    ]
   },
   {
